# Filer

./: Cargo.toml  README.md  ROADMAP.md
filer-core/: Cargo.toml  README.md
filer-core/src/: errors.rs  lib.rs
filer-core/src/actors/: cache.rs  mod.rs  navigator.rs  previewer.rs  scanner.rs  searcher.rs  watcher.rs
filer-core/src/api/: commands.rs  events.rs  handle.rs  mod.rs  session_manager.rs
filer-core/src/bus/: channel.rs  mod.rs
filer-core/src/model/: fs_change.rs  mod.rs  node.rs  query.rs  registry.rs  session.rs
filer-core/src/pipeline/: config.rs  filter.rs  group.rs  mod.rs  sort.rs
filer-core/src/services/: mod.rs
filer-core/src/services/crypto/: cipher.rs  key.rs  mod.rs  vault.rs
filer-core/src/services/metadata/: basic.rs  extended.rs  extractor.rs  mod.rs
filer-core/src/services/mime/: detector.rs  mod.rs
filer-core/src/services/preview/: cache.rs  mod.rs  provider.rs  registry.rs
filer-core/src/test/: crypto_test.rs  mod.rs  utils_test.rs  vfs_test.rs
filer-core/src/tests/: actor_test.rs  bus_test.rs  error_test.rs  mod.rs  model_test.rs  navigator_test.rs  pipeline_test.rs  scanner_test.rs  session_manager_test.rs  session_test.rs  utils_test.rs  vfs_test.rs
filer-core/src/utils/: grouped_node.rs  mod.rs  path.rs  size.rs  time.rs
filer-core/src/vfs/: archive.rs  ftp.rs  fuse.rs  kubernetes.rs  local.rs  mod.rs  provider.rs  remote.rs  s3.rs  webdav.rs
filer-core/test/: crypto_test.rs  mime_test.rs  mod.rs  model_test.rs  pipeline_test.rs  utils_test.rs  vfs_test.rs
filer-core/tests/: mime_test.rs  pipeline_test.rs
(+13 files in other folders)
